--- a/backend/package.json
+++ b/backend/package.json
@@ -4,17 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
-  "author": "MuqtadirBillah",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^8.5.1",
+    "express": "^4.18.1",
     "moment": "^2.29.4",
-    "mongoose": "^6.6.7"
+    "mongoose": "^6.6.3",
+    "nodemon": "^2.0.20"
   }
 }
